# custom_ur_franka

./: CMakeLists.txt  package.xml
config/: ur5_controllers_gripper.yaml
launch/: spawn_gripper_moveit.launch.py  spawn_moveit.launch.py  ur_sim_control.launch.py  view_ur.launch.py
rviz/: gazebo  view.rviz  world_table
src/: UR5PickAndMotion.py  complex_pick_and_motion.cpp
urdf/: robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5.urdf.xacro  ur5_gripper.urdf.xacro  ur5_macro.xacro
